--- a/arch/arm/boot/dts/tcc/tcc8059-linux-dvrs.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8059-linux-dvrs.dtsi
@@ -321,6 +321,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&i2c28_bus>;
 
+		/* video decoder using parallel interface output */
 		adv7182: adv7182 {
 			status		= "okay";
 			compatible	= "adi,adv7182";
@@ -356,7 +357,7 @@
 		/* HD camera module & max9286 using MIPI CSI2 output */
 		max96701: max96701 {
 			/* serializer */
-			status		= "disabled";
+			status		= "okay";
 			compatible	= "maxim,max96701";
 			reg		= <0x40>;
 			ports {
@@ -379,7 +380,7 @@
 
 		max9286: max9286 {
 			/* deserializer */
-			status		= "disabled";
+			status		= "okay";
 			compatible	= "maxim,max9286";
 			pwd-gpios	= <&gpg 5 1>;
 			intb-gpios	= <&gph 11 1>;
