[upg] fix err in subcore device tree for cs
Change-Id: Id049bf958c2d7d9c8dcfb30a95eb486cfaabd284

--- a/arch/arm/boot/dts/tcc/tcc8050-linux-subcore-a53q_sv1.0.dts
+++ b/arch/arm/boot/dts/tcc/tcc8050-linux-subcore-a53q_sv1.0.dts
@@ -82,19 +82,11 @@
 		videoinput5 = &videoinput5;
 		videoinput6 = &videoinput6;
 		videoinput7 = &videoinput7;
-#if defined(CONFIG_FB_NEW_FB0)
 		fb0 = &fb0;
-#endif
-#if defined(CONFIG_FB_NEW_FB1)
 		fb1 = &fb1;
-#endif
-#if defined(CONFIG_FB_NEW_FB2)
 		fb2 = &fb2;
-#endif
 		wmixer-drv1 = &wmixer_drv1;
-#if defined(CONFIG_OVERLAY1)
 		tcc-overlay-drv1 = &tcc_overlay_drv1;
-#endif
 	};
 
 	cpus {
@@ -229,7 +221,6 @@
 			no-map;
 		};
 
-#if defined(CONFIG_FB_NEW_FB1)
 		pmap_fb1_video: fb1_video {
 			compatible = "telechips,pmap";
 			telechips,pmap-name = "fb1_video";
@@ -237,9 +228,7 @@
 			size = <PMAP_SIZE_FB1_VIDEO>;
 			no-map;
 		};
-#endif
 
-#if defined(CONFIG_FB_NEW_FB2)
 		pmap_fb2_video: fb2_video {
 			compatible = "telechips,pmap";
 			telechips,pmap-name = "fb2_video";
@@ -247,7 +236,6 @@
 			size = <PMAP_SIZE_FB2_VIDEO>;
 			no-map;
 		};
-#endif
 
 		pmap_overlay_rot: overlay_rot {
 			compatible = "telechips,pmap";
@@ -1520,7 +1508,6 @@
 	};
 #endif
 
-#if defined(CONFIG_FB_NEW_FB0)
 	fb0: fb@0 { //Cluster
 		compatible = "telechips,fb";
 		status = "okay";
@@ -1535,12 +1522,10 @@
 		telechips,wmixer = <&vioc_wmix VIOC_WMIX2>;
 		telechips,rdma = <&vioc_rdma VIOC_RDMA08>;
 	};
-#endif
 
-#if defined(CONFIG_FB_NEW_FB1)
 	fb1: fb@1 { //SVM
 		compatible = "telechips,fb";
-		status = "okay";
+		status = "disabled";
 		memory-region = <&pmap_fb1_video>;
 		xres = <1920>;
 		yres = <720>;
@@ -1550,14 +1535,12 @@
 		device-priority = <FBX_DEVICE_LVDS>;
 		telechips,disp = <&vioc_disp VIOC_DISP0>;
 		telechips,wmixer = <&vioc_wmix VIOC_WMIX0>;
-		telechips,rdma = <&vioc_rdma VIOC_RDMA01>;
+		telechips,rdma = <&vioc_rdma VIOC_RDMA02>;
 	};
-#endif
 
-#if defined(CONFIG_FB_NEW_FB2)
 	fb2: fb@2 { //BVM
 		compatible = "telechips,fb";
-		status = "okay";
+		status = "disabled";
 		memory-region = <&pmap_fb2_video>;
 		xres = <1920>;
 		yres = <720>;
@@ -1569,7 +1552,6 @@
 		telechips,wmixer = <&vioc_wmix VIOC_WMIX2>;
 		telechips,rdma = <&vioc_rdma VIOC_RDMA09>;
 	};
-#endif
 
 	tcc_overlay_drv {
 		compatible = "telechips,tcc_overlay";
@@ -1580,16 +1562,14 @@
 		status = "okay";
 	};
 
-#if defined(CONFIG_OVERLAY1)
 	tcc_overlay_drv1: tcc_overlay_drv@1 { //FVC
 		compatible = "telechips,tcc_overlay";
 		display_num = <1>;
 		rdmas = <&vioc_rdma VIOC_RDMA00 VIOC_RDMA01 VIOC_RDMA02 VIOC_RDMA03 VIOC_RDMA04 VIOC_RDMA05 VIOC_RDMA06 VIOC_RDMA07>;
 		wmixs = <&vioc_wmix VIOC_WMIX0 VIOC_WMIX1>;
 		rdma_init_layer = <2>;
-		status = "okay";
+		status = "disabled";
 	};
-#endif
 
 	wmixer_drv1: wmixer_drv@1 {
 		compatible = "telechips,wmixer_drv";
