[fea] [ICTC] Pin-control information is parsed from device tree.
Pin-control information is parsed from device tree.
Source numbers are appended to each node of GPIO groups for future use.

Linked Commit: N/A
ITS: TMBSP-2788

Change-Id: Ie2b32da9402083b13bcc0d73fd266f0fb1e57646

--- a/arch/arm/boot/dts/tcc/tcc8031-pinctrl.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc8031-pinctrl.dtsi
@@ -47,18 +47,21 @@
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x0 0 32>;
+		source-num = <1>;
 	};
 
 	gpb: gpb {
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x40 0 29>;
+		source-num = <33>;
 	};
 
 	gpc: gpc {
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x80 0 30>;
+		source-num = <62>;
 	};
 
 	gpd: gpd {
@@ -71,6 +74,7 @@
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x100 0 20>;
+		source-num = <92>;
 	};
 
 	gpf: gpf {
@@ -83,12 +87,14 @@
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x180 0 11>;
+		source-num = <112>;
 	};
 
 	gph: gph {
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x640 0 12>;
+		source-num = <123>;
 	};
 
 	gpk: gpk {
@@ -101,24 +107,28 @@
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x6C0 0 30>;
+		source-num = <145>;
 	};
 
 	gpsd0: gpsd0 {
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x200 0 15>;
+		source-num = <166>;
 	};
 
 	gpsd1: gpsd1 {
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x240 0 11>;
+		source-num = <181>;
 	};
 
 	gpsd2: gpsd2 {
 		gpio-controller;
 		#gpio-cells = <2>;
 		reg = <0x600 0 10>;
+		source-num = <192>;
 	};
 
 	nand_databus8: nand_databus8 {
