--- a/arch/arm/boot/dts/tcc/tcc805x.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc805x.dtsi
@@ -4016,6 +4016,7 @@
 		compatible = "telechips,ictc";
 		reg = <0x0 0x16055000 0x0 0x4d>;
 		interrupts = <GIC_SPI 97 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-map = <&gpa &gpb &gpc &gpe &gpg &gph &gpma &gpmb &gpmc &gpmd &gpsd0 &gpsd1 &gpsd2>;
 		clocks = <&clk_peri PERI_IC_TC>;
 		status = "disabled";
 	};
