[fea] Add pinctrl driver test code
Linked Commit:
ITS:

Change-Id: I17e06b7c14d77e895b905f03129c181912e72f48

--- a/drivers/misc/tcc/Kconfig
+++ b/drivers/misc/tcc/Kconfig
@@ -41,10 +41,16 @@ config SCALER_TEST
 		Telechips testscaler driver
 
 config GPIO_TCC_SAMPLE
-        default n
-        bool "TCC gpio sample driver"
-        help
-		Telechips gpio sample driver.
+	default n
+	depends on PINCTRL_TCC
+	depends on ARCH_TCC
+	bool "TCC gpio sample driver"
+
+config TCC_GPIO_TEST
+	default n
+	depends on PINCTRL_TCC
+	depends on ARCH_TCC
+	bool "TCC gpio test driver"
 
 config CLKOUT_TCC_SAMPLE
         default n
